; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_obj.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.obs_data_item*)* @get_item_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_item_obj(%struct.obs_data_item* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.obs_data_item*, align 8
  %4 = alloca i32**, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %3, align 8
  %5 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %6 = icmp ne %struct.obs_data_item* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %17

8:                                                ; preds = %1
  %9 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %10 = call i32** @get_item_data(%struct.obs_data_item* %9)
  store i32** %10, i32*** %4, align 8
  %11 = load i32**, i32*** %4, align 8
  %12 = icmp ne i32** %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %8
  store i32* null, i32** %2, align 8
  br label %17

14:                                               ; preds = %8
  %15 = load i32**, i32*** %4, align 8
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %2, align 8
  br label %17

17:                                               ; preds = %14, %13, %7
  %18 = load i32*, i32** %2, align 8
  ret i32* %18
}

declare dso_local i32** @get_item_data(%struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
